@@ -13,9 +13,9 @@ define(
       "saturated": "Saturated!",
       "showValues": "Show values",
       "solute": "Solute",
-      "soluteAmount": "Amount",
-      "solutionConcentration": "Concentration",
-      "solutionVolume": "Volume",
+      "soluteAmount": "Solute\nAmount",
+      "solutionConcentration": "Solution\nConcentration",
+      "solutionVolume": "Solution\nVolume",
       "units_liters": "L",
       "units_molarity": "M",
       "units_moles": "mol",
